--- a/templates/columns2.mustache
+++ b/templates/columns2.mustache
@@ -74,7 +74,7 @@
 
                     {{# in_course}}
                     <section id="left-menu-course">
-                        MENÚ IZQUIERDA
+                        {{{ course_left_menu }}}
                     </section>
                     {{/ in_course}}
 
