--- a/templates/core/full_header.mustache
+++ b/templates/core/full_header.mustache
@@ -58,6 +58,45 @@
         </div>
     </div>
     {{/ is_board }}
+    {{# is_themes }}
+        <div class="col-9 pt-3 pb-3">
+            <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
+                <div class="card-body {{^contextheader}}p-2{{/contextheader}}">
+                    <div class="d-sm-flex align-items-center">
+                        {{#contextheader}}
+                            <div class="mr-auto">
+                                {{{contextheader}}}
+                            </div>
+                        {{/contextheader}}
+
+                        {{#settingsmenu}}
+                            <div class="context-header-settings-menu">
+                                {{{settingsmenu}}}
+                            </div>
+                        {{/settingsmenu}}
+                        <div class="header-actions-container flex-shrink-0" data-region="header-actions-container">
+                            {{#headeractions}}
+                                <div class="header-action ml-2">{{{.}}}</div>
+                            {{/headeractions}}
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap">
+                        {{#hasnavbar}}
+                            <div id="page-navbar">
+                                {{{navbar}}}
+                            </div>
+                        {{/hasnavbar}}
+                        <div class="ml-auto d-flex">
+                            {{{pageheadingbutton}}}
+                        </div>
+                        <div id="course-header">
+                            {{{courseheader}}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{/ is_themes}}
     {{# is_generic }}
     <div class="col-12 pt-3 pb-3">
         <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
