--- a/templates/core/full_header.mustache
+++ b/templates/core/full_header.mustache
@@ -34,8 +34,8 @@
         <div class="card header-board" style='background-image: url("{{{courseimage}}}");'>
             <div class="degraded">
                 <div class="title-box">
-                    <h3 class="category">1è Primària A</h3>
-                    <h2 class="coursename">PLÀSTICA</h2>
+                    <h3 class="category">{{ categoryname }}</h3>
+                    <h2 class="coursename">{{ coursename }}</h2>
                 </div>
                 <ul class="teachers-box">
                     {{# teachers }}
