--- a/templates/columns2.mustache
+++ b/templates/columns2.mustache
@@ -78,7 +78,7 @@
                     </section>
                     {{/ in_course}}
 
-                    <section {{# in_course}}class="col-9"{{/ in_course}} id="region-main" {{#hasblocks}}class="has-blocks mb-3"{{/hasblocks}} aria-label="{{#str}}content{{/str}}">
+                    <section {{# in_course}}class="col-9 {{# is_course_blocks }}in_course{{/is_course_blocks}}"{{/ in_course}} id="region-main" {{#hasblocks}}class="has-blocks mb-3"{{/hasblocks}} aria-label="{{#str}}content{{/str}}">
                         {{#hasregionmainsettingsmenu}}
                             <div class="region_main_settings_menu_proxy"></div>
                         {{/hasregionmainsettingsmenu}}
