--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -222,6 +222,9 @@ body[data-theme='cbe'][data-role='user'] {
       background-color: $primary-color;
     }
   }
+  .add-module.action {
+    margin-top: 0 ;
+  }
 
 
 }
