--- a/templates/course_left_section_component.mustache
+++ b/templates/course_left_section_component.mustache
@@ -1,6 +1,6 @@
 <div id="course-left-section">
     {{# sections }}
-    <div class="menu-card pending-tasks">
+    <div class="menu-card">
         {{{ . }}}
     </div>
     {{/ sections }}
