--- a/templates/course_left_section_menu_component.mustache
+++ b/templates/course_left_section_menu_component.mustache
@@ -20,4 +20,10 @@
             <span class="text">{{# str }} course_left_participants, theme_cbe {{/ str }}</span>
         </a>
     </li>
+    <li class="link">
+        <a href="{{ links.settings }}">
+            <i class="fa fa-wrench" aria-hidden="true"></i>
+            <span class="text">{{# str }} course_left_settings, theme_cbe {{/ str }}</span>
+        </a>
+    </li>
 </ul>
