--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -16,3 +16,6 @@
 @import "pages/course";
 @import "pages/board";
 @import "pages/themes";
+@import "pages/moreinfo";
+@import "pages/tasks";
+@import "pages/vclasses";
