--- a/scss/base/_form.scss
+++ b/scss/base/_form.scss
@@ -13,8 +13,7 @@ body[data-theme='cbe'][data-role='user'] {
     color: $grey-medium;
   }
   .form-control {
-    border-radius: $border-input;
-    background-color: $grey-light;
+    background-color: white;
     border: 1px solid $grey-border;
   }
 
