--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -8,6 +8,7 @@ body[data-theme='cbe'][data-role='user'] {
     outline-color: transparent !important;
     outline-offset: unset !important;
     box-shadow: none !important;
+    background-color: inherit !important;
   }
 
   .dropdown-item:active,
