--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -10,6 +10,7 @@
 @import "layout/navbar";
 @import "layout/footer";
 @import "layout/myoverview";
+@import "layout/editionmode";
 
 @import "pages/login";
 @import "pages/dashboard";
@@ -19,3 +20,4 @@
 @import "pages/moreinfo";
 @import "pages/tasks";
 @import "pages/vclasses";
+@import "pages/generic";
