--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -6,7 +6,7 @@ body[data-theme='cbe'][data-role='user'] {
         background-color: #fff;
         margin: 0 0 15px;
         border: 1px solid $border-color;
-        padding: 10px;
+        padding: 15px 10px;
       }
     }
   }
