--- a/scss/base/_form.scss
+++ b/scss/base/_form.scss
@@ -1,7 +1,7 @@
 body[data-theme='cbe'][data-role='user'] {
 
   .btn {
-    border-radius: $border-input;
+    border-radius: 0;
   }
 
   .btn-secondary {
