--- a/templates/course_left_section_pending_tasks_component.mustache
+++ b/templates/course_left_section_pending_tasks_component.mustache
@@ -2,18 +2,13 @@
 <h3 class="title">{{ title }}</h3>
 {{/ title }}
 <ul class="pending-taks">
+    {{# pending_tasks }}
     <li class="task">
-        <span class="icon assign"></span>
+        <span class="icon {{ modname }}"></span>
         <div class="data">
-            <div class="text">Investigació del romànic a Tarragona</div>
-            <div class="deadline">{{# str }} deadline, theme_cbe {{/ str }}: 23/03/2021</div>
+            <a class="text" href="{{ view_href }}">{{ name }}</a>
+            <div class="deadline">{{# str }} deadline, theme_cbe {{/ str }}: {{ deadline }}</div>
         </div>
     </li>
-    <li class="task">
-        <span class="icon feedback"></span>
-        <div class="data">
-            <div class="text">Enquesta de valoració</div>
-            <div class="deadline">{{# str }} deadline, theme_cbe {{/ str }}: 25/03/2021</div>
-        </div>
-    </li>
+    {{/ pending_tasks }}
 </ul>
