--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -205,6 +205,13 @@ body[data-theme='cbe'][data-role='user'] {
       .name {
         font-family: $fontbold;
         font-size: 18px;
+        a {
+          color: $black-ligth;
+          &:hover {
+            text-decoration: none;
+            color: dimgrey;
+          }
+        }
       }
       .added {
         font-size: 16px;
