--- a/templates/course_left_section_pending_tasks_component.mustache
+++ b/templates/course_left_section_pending_tasks_component.mustache
@@ -11,4 +11,8 @@
         </div>
     </li>
     {{/ pending_tasks }}
+    {{^ has_pending_tasks }}
+        <p>{{# str }} pending_tasks_not, theme_cbe {{/ str }}</p>
+    {{/has_pending_tasks}}
+
 </ul>
