--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -86,6 +86,7 @@ body[data-theme='cbe'][data-role='user'] {
     background-color: white;
     border: 1px solid $grey-border;
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px;
+    margin-bottom: 15px;
     #create_on_hold {
       display: flex;
       align-items: center;
@@ -171,7 +172,7 @@ body[data-theme='cbe'][data-role='user'] {
     border: 1px solid $grey-border;
     display: flex;
     align-items: normal;
-    margin-top: 15px;
+    margin-bottom: 15px;
     position: relative;
     .mod {
       width: 60px;
@@ -297,8 +298,9 @@ body[data-theme='cbe'][data-role='user'] {
     position: absolute;
     right: 0;
     margin-top: 30px;
-    &:hover {
+    &:hover, &:focus {
       background-color: $primary-color;
+      text-decoration: none;
     }
   }
   .add-module.action {
