--- a/templates/core_course/coursecard.mustache
+++ b/templates/core_course/coursecard.mustache
@@ -42,7 +42,7 @@
             <span class="sr-only">{{#str}}aria:courseimage, core_course{{/str}}</span>
         </div>
     </a>
-    <div class="teachers">
+    <div class="teachers" >
         <div class="teacher">
             <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="Juana García Sánchez">
                 <img class="picture-teacher" src="https://randomuser.me/api/portraits/women/75.jpg" alt="">
@@ -91,13 +91,20 @@
             </button>
         </div>
         <div class="students">
-            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="20 estudiantes">
+            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="20 {{# str }} students {{/ str }}">
                 <i class="fa fa-users" aria-hidden="true"></i><span>20</span>
             </button>
         </div>
         <div class="user-role">
-            <a href="{{ viewurl }}" class="btn btn-secondary aula">ver aula</a>
+            <a href="{{ viewurl }}" class="btn btn-secondary aula">{{# str }} view_course, theme_cbe {{/ str }}</a>
         </div>
     </footer>
 </div>
+
+{{#js}}
+    require(['theme_cbe/coursecard'], function() {
+        console.log('aki');
+        /*coursecard.initCourseCard('[data-region="course-content"]');*/
+    });
+{{/js}}
 
